--- a/EyeZen-FE/package.json
+++ b/EyeZen-FE/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@react-google-maps/api": "^2.19.2",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "firebase": "^10.3.1",
     "install": "^0.13.0",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "npm": "^10.0.0",
     "react": "^18.2.0",
     "react-cloudinary-uploader": "^1.1.1",
